# FastSoup

./: .bumpversion.cfg  .gitignore  pyproject.toml  setup.py
.github/workflows/: package-release.yml
fast_soup/: __init__.py
tests/: test_extract.py  test_fast_soup.py  test_replace_with.py  test_tree.py
