[project]
name = "fast-soup"
version = "1.3.1"
description = "BeautifulSoup interface for lxml"
authors = [
    {name = "spumer", email = "spumer-tm@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.0",
    "beautifulsoup4>=4.13.4",
    "cssselect>=1.3.0",
    "rm-html5-parser>=0.4.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "bumpversion>=0.6.0",
    "unify>=0.5",
    "flake8-awesome>=1.3",
    "black>=20.8b1",
    "pytest-cov>=4.0",
    "pytest-deadfixtures>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
